IGAPP-901: removed toolbar, fixed thread issues

--- a/web/src/styles/BottomActionSheet.css
+++ b/web/src/styles/BottomActionSheet.css
@@ -4,11 +4,15 @@
   box-shadow: none;
 }
 
+[data-rsbs-has-header='false'] [data-rsbs-header] {
+  padding: calc(18px + env(safe-area-inset-top)) 0;
+}
+
 [data-rsbs-header]:before {
   width: 28px;
   height: 3px;
   background-color: #585858;
-  top: calc(12px + env(safe-area-inset-top));
+  top: calc(18px + env(safe-area-inset-top));
 }
 
 [data-rsbs-overlay] {
